--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div id="loader" class="loading-overlay">⏳ Синхронизация с облаком...</div>
 
 <div class="container">
-    <h1 class="no-print" style="text-align:center; font-size:22px;">📋  Очередь на реабилитацию 2027год</h1>
+    <h1 class="no-print" style="text-align:center; font-size:22px;">📋  Очередь на реабилитацию 2027года</h1>
 
     <div class="card no-print">
         <div class="grid" id="mainForm">
